[omnibox] Fix basic issues with `kWebUIOmniboxFullPopup`.
Minor changes to account for drift over time including missing CSS, a
DCHECK bypass and view presentation management. Long term we may go in a
very different direction but for now this gets the feature testable in
Canary and unblocks development.

Note that the full WebUI Omnibox will render and mostly work but is
still very broken in it's current state.

Bug: 493334386
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/7737589
Auto-Submit: Aviv Kiss <avivkiss@google.com>
Commit-Queue: Marlon Facey <mfacey@chromium.org>
Cr-Commit-Position: refs/heads/main@{#1611502}

--- a/chrome/browser/resources/omnibox_popup/full_app.css
+++ b/chrome/browser/resources/omnibox_popup/full_app.css
@@ -11,6 +11,7 @@ cr-searchbox {
   --cr-searchbox-height: 36px;
   --cr-searchbox-icon-left-position: 12px;
   --cr-searchbox-icon-top-position: 0;
+  --cr-searchbox-min-width: 100%;
   display: block;
 }
 
